--- a/PayRoll.css
+++ b/PayRoll.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 *{
     box-sizing: border-box;
 }
@@ -88,4 +90,18 @@ label{
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+.profile-radio-content{
+    display: flex;
+    flex-direction: row;
+}
+.profile-radio-content >label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.profile{
+    width: 35px;
+    border-radius: 50%;
+    margin-left: 12px;
 }
