--- a/PayRoll.css
+++ b/PayRoll.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
     height: 100%;
 }
-header{
+.header{
     padding: 15px 0;
     background-color: #ffffff;
 }
@@ -21,31 +21,30 @@ header{
 .logo-content{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     border: 0px solid green;
-    width: 80px;
+    width: 80%;
 }
 .logo-content img{
     border: 0px solid #42515f;
 }
 .emp-text{
-    font: normal normal bold 20px/25px Montserrat;
+    font: normal normal bold ;
     font-family: "Montserrat",sans-serif;
     letter-spacing: 0px;
     color: #82a70c;
     text-transform: capitalize;
 }
-.emp-payrpll{
+.emp-payroll{
     color: #42515f;
 }
 .form-content{
-min-height: calc(100-80%); 
-background-color: #f7f7f7;
-display: flex;
-justify-content: center;
-align-items: center;
-border: 0px solid green;
+    min-height: calc(100%-80px);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0px solid green;
 }
 .form{
     width: 65%;
